[gd_scene load_steps=14 format=2]

[ext_resource path="res://objects/LaserWeapon.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/EngineParticles.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/small_drone.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/sfx/EngineRoar.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/images/ships/drone1.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 27.074

[sub_resource type="Gradient" id=8]
resource_local_to_scene = true
offsets = PoolRealArray( 0.467391, 0.732919, 1 )
colors = PoolColorArray( 1, 0.619608, 0, 1, 0.178223, 0.178223, 0.178223, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=9]
resource_local_to_scene = true
gradient = SubResource( 8 )

[sub_resource type="Curve" id=4]
max_value = 100.0
_data = [ Vector2( 0, 1 ), 0.0, 412.885, 0, 0, Vector2( 1, 100 ), 152.066, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0.5 ), 0.0, 0.0, 0, 0, Vector2( 0.88587, 1 ), 2.00727, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=10]
resource_local_to_scene = true
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 16.48
gravity = Vector3( 0, 0, 0 )
initial_velocity = 440.0
initial_velocity_random = 0.5
angular_velocity_random = 0.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -1.0
damping = 25.0
damping_curve = SubResource( 5 )
scale = 15.0
scale_curve = SubResource( 7 )
color_ramp = SubResource( 9 )

[node name="ship" type="KinematicBody2D" groups=["camera target"]]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 1.2, 0, 1 )
texture = ExtResource( 5 )

[node name="LaserWeapon" parent="." instance=ExtResource( 1 )]

[node name="EngineNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EngineParticles" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 30 )
process_material = SubResource( 10 )
